--- a/Hrite-EWebAndServices/public/index.html
+++ b/Hrite-EWebAndServices/public/index.html
@@ -1,19 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-  <nav>
-    <div class="logo">
+  <nav id="navbar">
+    <header id="header">
+    <div class="logo" id="logo">
       <h1><span>H</span>rite</h1>
     </div>
+    <div class="links">
+      <ul class="ul-nav" id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div class="checkit">
+      <button id="nav-button">Start Now</button>
+    </div>
+    </header>
   </nav>
 
+  <main>
+
+  </main>
+
+  <footer>
+    <div class="footer">
+      <div class="service">
+        <h1>Services</h1>
+        <ul>
+          <li><a href="#">Web Development</a></li>
+          <li><a href="#">App Development</a></li>
+          <li><a href="#">SEO Services</a></li>
+          <li><a href="#">Digital Marketing</a></li>
+          <li><a href="#">Animation And Video Editing</a></li>
+      </div>
+      <div class="legals">
+        <h1>Legals</h1>
+        <ul>
+          <li><a href="privacy">Privacy Policy</a></li>
+          <li><a href="about">About And Licensing</a></li>
+          <li><a href="terms">Terms And Conditions</a></li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h1>Contact Us:</h1>
+        <h2>Subscribe To Our Newsletter</h2>
+        <div class="subscribe">
+          <input type="email" placeholder="Enter your email">
+          <button>Subscribe</button>
+        </div>
+        <ul>
+          <li><img src="images/facebook-svgrepo-com.svg" alt=""></li>
+          <li><img src="images/instagram-svgrepo-com.svg" alt=""></li>
+          <li><img src="images/linkedin-1-svgrepo-com.svg" alt=""></li>
+          <li><img src="images/twitter-svgrepo-com.svg" alt=""></li>
+          <li><img src="images/whatsapp-color-svgrepo-com.svg" alt=""></li>
+        </ul>
+        <div class="contact-info">
+          <a href="#"><img src="images/phone-svgrepo-com.svg" alt="">97xxxx0909</a>
+          <a href="#"><img src="images/mail-svgrepo-com.svg" alt="">viq@star.com</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="copyright">
+      <p>&copy; 2023 Hrite. All rights reserved.</p>
+      <p>Designed by <a href="viqstar.com">viqSTAR</a></p>
+    </div>
+
+  </footer>
 
   <script src="scripts/script.js"></script>
 </body>
+
 </html>
